--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "primeflex": "^1.2.0",
     "primeicons": "^4.0.0",
     "primevue": "^2.0.0-rc.1",
     "vue": "^2.6.11",
