--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vca-widget-base": "^0.1.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-i18n": "^8.18.2",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
